--- a/app/src/main/res/drawable/ic_indentation_out.xml
+++ b/app/src/main/res/drawable/ic_indentation_out.xml
@@ -1,33 +1,153 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="54dp"
-    android:height="54dp"
-    android:viewportWidth="54"
-    android:viewportHeight="54">
-
-
-  <path
-      android:pathData="M12,15.5L41,15.5"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M21,22.83L41,22.83"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M21,30.5L41,30.17"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M12,37.5L41,37.5"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-    android:pathData="M17.5,21.5l0,10l-5.5,-5z"
-    android:fillColor="#A09F9F"/>
-
-
+<vector android:height="50dp" android:viewportHeight="54"
+    android:viewportWidth="54" android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-958.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-950,274.23 -953.77,278 -958.41,278z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-884.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-876,274.23 -879.77,278 -884.41,278z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-810.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-802,274.23 -805.77,278 -810.41,278z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-699.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-691,274.23 -694.77,278 -699.41,278z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-625.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-617,274.23 -620.77,278 -625.41,278z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-810.41,352h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-802,348.23 -805.77,352 -810.41,352z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-884.41,352h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-876,348.23 -879.77,352 -884.41,352z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-810.41,426h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-802,422.23 -805.77,426 -810.41,426z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-810.41,500h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-802,496.23 -805.77,500 -810.41,500z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-884.41,426h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-876,422.23 -879.77,426 -884.41,426z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-958.41,352h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-950,348.23 -953.77,352 -958.41,352z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-958.41,426h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-950,422.23 -953.77,426 -958.41,426z" android:strokeAlpha="0.571"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-216,14l-23,0l0,6.27l8.36,0l0,20.91l6.28,0l0,-20.91l8.36,0z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-233.58,27.26l-11.4,-0.02l-0.01,3.63l3.88,0l-0.02,10.11l3.63,0.01l0.02,-10.11l3.89,0.01z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-160.64,10.95h5.22l7.8,22.05h-5l-1.46,-4.53h-8.12l-1.49,4.53h-4.82L-160.64,10.95zM-160.94,24.67h5.65l-2.79,-8.68L-160.94,24.67z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-175,37h34v6h-34z"/>
+    <path android:fillColor="#A09F9F"
+        android:pathData="M-74.66,16.18c0.82,1.13 1.22,2.49 1.22,4.07c0,1.63 -0.41,2.94 -1.24,3.92c-0.46,0.55 -1.14,1.06 -2.03,1.52c1.36,0.49 2.39,1.28 3.08,2.35c0.69,1.07 1.04,2.38 1.04,3.91c0,1.58 -0.39,3 -1.19,4.25c-0.5,0.83 -1.13,1.53 -1.89,2.1c-0.85,0.65 -1.86,1.1 -3.01,1.34c-1.16,0.24 -2.41,0.36 -3.77,0.36h-12.01V13.34h12.88C-78.32,13.39 -76.01,14.34 -74.66,16.18zM-89.13,17.97v5.88h6.48c1.16,0 2.09,-0.22 2.82,-0.66c0.72,-0.44 1.08,-1.22 1.08,-2.34c0,-1.24 -0.48,-2.06 -1.43,-2.46c-0.82,-0.28 -1.87,-0.42 -3.15,-0.42H-89.13zM-89.13,28.26v7.11h6.47c1.16,0 2.06,-0.16 2.7,-0.47c1.17,-0.58 1.75,-1.69 1.75,-3.33c0,-1.39 -0.57,-2.34 -1.7,-2.86c-0.63,-0.29 -1.52,-0.44 -2.66,-0.45H-89.13z"
+        android:strokeColor="#A09F9F" android:strokeWidth="0.5"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-224,91.19l0,-3.9l-10.27,0l0,3.9l2.86,0l-3.86,19.72l-3.11,0l0,3.9l10.27,0l0,-3.9l-2.66,0l3.87,-19.72z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-171,114h26v3h-26z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-245,175L-218,175"
+        android:strokeColor="#A09F9F" android:strokeWidth="5"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-232,162L-232,189"
+        android:strokeColor="#A09F9F" android:strokeWidth="5"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-98,90.5L-69,90.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-98,97.83L-77,97.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-98,105.17L-69,105.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000" android:pathData="M-101,110.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="5"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-98,112.5L-77,112.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-98,237.5L-69,237.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-90,244.83L-69,244.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-98,252.17L-69,252.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-90,259.5L-69,259.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-99,164.5L-70,164.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-95,171.83L-74,171.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-99,179.17L-70,179.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-95,186.5L-74,186.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#FF000000" android:pathData="M144,213h47v47h-47z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M203,213h47v47h-47z"/>
+    <path android:fillColor="#EA2621" android:pathData="M262,213h47v47h-47z"/>
+    <path android:fillColor="#2525BA" android:pathData="M318,213h47v47h-47z"/>
+    <path android:fillColor="#146D20" android:pathData="M372,214h47v47h-47z"/>
+    <path android:fillColor="#FCC047" android:pathData="M144,273h47v47h-47z"/>
+    <path android:fillColor="#97D86C" android:pathData="M203,273h47v47h-47z"/>
+    <path android:fillColor="#ED4F6A" android:pathData="M144,333h47v47h-47z"/>
+    <path android:fillColor="#D6133D" android:pathData="M203,333h47v47h-47z"/>
+    <path android:fillColor="#709EFC" android:pathData="M262,273h47v47h-47z"/>
+    <path android:fillColor="#F96E90" android:pathData="M318,273h47v47h-47z"/>
+    <path android:fillColor="#9B9B9B" android:pathData="M372,274h47v47h-47z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M174.22,41l-11.31,-14.71l3.05,-2.35l7.96,10.35l12.02,-18.88l3.25,2.07z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M229,52l10,13l14,-22"
+        android:strokeColor="#A09F9F" android:strokeWidth="4"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-153.27,100.51c0,1.7 -0.2,2.95 -0.6,3.73c-0.63,1.39 -1.99,2.09 -4.08,2.09c-2.1,0 -3.47,-0.7 -4.09,-2.09c-0.4,-0.78 -0.61,-2.03 -0.61,-3.73V87h-5.27v13.53c0,2.64 0.41,4.69 1.23,6.16c1.53,2.69 4.45,4.04 8.74,4.04s7.2,-1.35 8.72,-4.04c0.82,-1.47 1.23,-3.52 1.23,-6.16V87h-5.27V100.51z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M19.08,88.95h5.69L33.27,113h-5.45l-1.59,-4.94h-8.85L15.75,113h-5.26L19.08,88.95zM18.74,103.91h6.16l-3.04,-9.46L18.74,103.91z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M40,96l0,-3l-11.84,0l1.07,3z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M40,101.67l0,-3l-9.81,0l1.07,3z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M40,107.33l0,-3l-7.79,0l1.07,3z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M40,113l0,-3l-5.76,0l1.07,3z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-5.92,-89.05h5.69L8.27,-65H2.82l-1.59,-4.94h-8.85L-9.25,-65h-5.26L-5.92,-89.05zM-6.26,-74.09h6.16l-3.04,-9.46L-6.26,-74.09z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M1.18,-89.07L9.82,-64.93"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M2,-86.5L14,-86.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M2,-80.83L14,-80.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M2,-75.17L14,-75.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M2,-69.5L14,-69.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-174,176h32v3h-32z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-153.84,173.37l-4.58,-1.08c-1.77,-0.41 -2.92,-0.77 -3.47,-1.08c-0.85,-0.46 -1.27,-1.16 -1.27,-2.09c0,-1.01 0.43,-1.8 1.29,-2.37c0.86,-0.57 2.01,-0.85 3.45,-0.85c1.29,0 2.38,0.22 3.25,0.65c1.3,0.66 2.01,1.77 2.1,3.34h5.24c-0.1,-2.77 -1.13,-4.89 -3.09,-6.34c-1.96,-1.46 -4.34,-2.18 -7.12,-2.18c-3.33,0 -5.86,0.77 -7.58,2.32c-1.72,1.55 -2.58,3.49 -2.58,5.82c0,1.85 0.47,3.34 1.39,4.48h15.05C-152.39,173.77 -153.07,173.56 -153.84,173.37z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-148.57,176h-15.32c1.04,0.41 2.38,0.79 4.05,1.16l2.82,0.62c1.65,0.35 2.86,0.76 3.62,1.22c0.76,0.47 1.14,1.14 1.14,2c0,1.48 -0.78,2.48 -2.33,3.03c-0.82,0.28 -1.88,0.42 -3.2,0.42c-2.19,0 -3.74,-0.54 -4.64,-1.61c-0.37,-0.44 -0.65,-1.06 -0.84,-1.84h-5.32c0.18,2.32 1.15,4.18 2.91,5.56c1.97,1.55 4.67,2.33 8.1,2.33c3.36,0 5.96,-0.79 7.81,-2.36c1.84,-1.57 2.76,-3.55 2.76,-5.94C-147,178.69 -147.53,177.17 -148.57,176z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M17.84,179.84l9.16,-9.15l9.16,9.15"
+        android:strokeColor="#A09F9F" android:strokeWidth="4"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M109.16,170.69l-9.16,9.15l-9.16,-9.15"
+        android:strokeColor="#A09F9F" android:strokeWidth="4"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M12,15.5L41,15.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M21,22.83L41,22.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M21,30.5L41,30.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M12,37.5L41,37.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#A09F9F" android:pathData="M17.5,21.5l0,10l-5.5,-5z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M87.5,31l0,-9l5.5,4.5z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M87,15.5L116,15.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M96,22.83L116,22.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M96,30.5L116,30.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M87,37.5L116,37.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
 </vector>
