--- a/app/src/main/res/drawable/ic_left_align.xml
+++ b/app/src/main/res/drawable/ic_left_align.xml
@@ -1,30 +1,87 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="54dp"
-    android:height="54dp"
-    android:viewportWidth="54"
-    android:viewportHeight="54">
-
-
-  <path
-      android:pathData="M13,16.5L42,16.5"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M13,23.83L34,23.83"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M13,31.17L42,31.17"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-
-  <path
-      android:pathData="M13,38.5L34,38.5"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-
+<vector android:height="50dp" android:viewportHeight="54"
+    android:viewportWidth="54" android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M181.59,133h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V99.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C190,129.23 186.23,133 181.59,133z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M255.59,133h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V99.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C264,129.23 260.23,133 255.59,133z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M329.59,133h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V99.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C338,129.23 334.23,133 329.59,133z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M440.59,133h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V99.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C449,129.23 445.23,133 440.59,133z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M514.59,133h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V99.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C523,129.23 519.23,133 514.59,133z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M329.59,207h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C338,203.23 334.23,207 329.59,207z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M255.59,207h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C264,203.23 260.23,207 255.59,207z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M329.59,281h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C338,277.23 334.23,281 329.59,281z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M329.59,355h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C338,351.23 334.23,355 329.59,355z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M255.59,281h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C264,277.23 260.23,281 255.59,281z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M181.59,207h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C190,203.23 186.23,207 181.59,207z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M181.59,281h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C190,277.23 186.23,281 181.59,281z" android:strokeAlpha="0.571"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-105,-60l-23,0l0,6.27l8.36,0l0,20.91l6.28,0l0,-20.91l8.36,0z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-122.58,-46.74l-11.4,-0.02l-0.01,3.63l3.88,0l-0.02,10.11l3.63,0.01l0.02,-10.11l3.89,0.01z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-49.64,-63.05h5.22l7.8,22.05h-5l-1.46,-4.53h-8.12L-52.69,-41h-4.82L-49.64,-63.05zM-49.94,-49.33h5.65l-2.79,-8.68L-49.94,-49.33z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-64,-37h34v6h-34z"/>
+    <path android:fillColor="#A09F9F"
+        android:pathData="M36.82,-58.38c0.86,1.19 1.29,2.62 1.29,4.29c0,1.71 -0.43,3.09 -1.3,4.13c-0.48,0.58 -1.2,1.12 -2.14,1.6c1.43,0.52 2.51,1.35 3.24,2.48c0.73,1.13 1.1,2.5 1.1,4.11c0,1.66 -0.42,3.16 -1.25,4.48c-0.53,0.88 -1.19,1.61 -1.99,2.21c-0.9,0.69 -1.96,1.16 -3.17,1.41c-1.22,0.25 -2.54,0.38 -3.97,0.38H15.97v-28.08h13.57C32.96,-61.32 35.39,-60.32 36.82,-58.38zM21.57,-56.49v6.19h6.83c1.22,0 2.21,-0.23 2.97,-0.7c0.76,-0.46 1.14,-1.29 1.14,-2.47c0,-1.31 -0.5,-2.17 -1.51,-2.59c-0.87,-0.29 -1.97,-0.44 -3.32,-0.44H21.57zM21.57,-45.65v7.49h6.82c1.22,0 2.17,-0.17 2.84,-0.5c1.23,-0.61 1.84,-1.78 1.84,-3.5c0,-1.46 -0.6,-2.46 -1.79,-3.01c-0.67,-0.3 -1.6,-0.46 -2.81,-0.48H21.57z"
+        android:strokeColor="#A09F9F" android:strokeWidth="0.5"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-112.38,16.34l0,-4.24l-11.16,0l0,4.24l3.12,0l-4.21,21.42l-3.37,0l0,4.24l11.16,0l0,-4.24l-2.9,0l4.21,-21.42z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-60,40h26v3h-26z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-56.92,11.27h5.27v15.24c0,1.7 0.2,2.95 0.61,3.73c0.62,1.39 1.99,2.09 4.09,2.09c2.09,0 3.45,-0.7 4.08,-2.09c0.4,-0.78 0.6,-2.03 0.6,-3.73V11.27H-37v15.25c0,2.64 -0.41,4.69 -1.23,6.16c-1.53,2.69 -4.43,4.04 -8.72,4.04s-7.2,-1.35 -8.74,-4.04c-0.82,-1.47 -1.23,-3.52 -1.23,-6.16V11.27z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-134,101L-107,101"
+        android:strokeColor="#A09F9F" android:strokeWidth="5"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-121,88L-121,115"
+        android:strokeColor="#A09F9F" android:strokeWidth="5"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,16.5L42,16.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,23.83L34,23.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,31.17L42,31.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000" android:pathData="M10,36.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="5"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,38.5L34,38.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,163.5L42,163.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M21,170.83L42,170.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,178.17L42,178.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M21,185.5L42,185.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M12,90.5L41,90.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M16,97.83L37,97.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M12,105.17L41,105.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M16,112.5L37,112.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-620.42,-91.83c0.17,1.19 0.5,2.08 0.99,2.67c0.9,1.07 2.45,1.61 4.64,1.61c1.31,0 2.38,-0.14 3.2,-0.42c1.55,-0.54 2.33,-1.55 2.33,-3.03c0,-0.86 -0.38,-1.53 -1.14,-2c-0.76,-0.46 -1.97,-0.87 -3.62,-1.22l-2.82,-0.62c-2.78,-0.62 -4.68,-1.28 -5.72,-2c-1.76,-1.2 -2.64,-3.08 -2.64,-5.64c0,-2.34 0.86,-4.28 2.58,-5.82c1.72,-1.55 4.25,-2.32 7.58,-2.32c2.78,0 5.16,0.73 7.12,2.18c1.97,1.46 2.99,3.57 3.09,6.34h-5.24c-0.1,-1.57 -0.8,-2.68 -2.1,-3.34c-0.87,-0.44 -1.95,-0.65 -3.25,-0.65c-1.44,0 -2.59,0.28 -3.45,0.85c-0.86,0.57 -1.29,1.36 -1.29,2.37c0,0.93 0.42,1.63 1.27,2.09c0.54,0.3 1.7,0.66 3.47,1.08l4.58,1.08c2.01,0.47 3.51,1.11 4.51,1.89c1.55,1.23 2.33,3 2.33,5.32c0,2.38 -0.92,4.36 -2.76,5.94c-1.84,1.58 -4.45,2.36 -7.81,2.36c-3.43,0 -6.13,-0.78 -8.1,-2.33s-2.95,-3.68 -2.95,-6.4H-620.42z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-631,-96h32v3h-32z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M-631,-98h32v2h-32z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-63,102h32v3h-32z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-42.84,99.37l-4.58,-1.08c-1.77,-0.41 -2.92,-0.77 -3.47,-1.08c-0.85,-0.46 -1.27,-1.16 -1.27,-2.09c0,-1.01 0.43,-1.8 1.29,-2.37c0.86,-0.57 2.01,-0.85 3.45,-0.85c1.29,0 2.38,0.22 3.25,0.65c1.3,0.66 2.01,1.77 2.1,3.34h5.24c-0.1,-2.77 -1.13,-4.89 -3.09,-6.34c-1.96,-1.46 -4.34,-2.18 -7.12,-2.18c-3.33,0 -5.86,0.77 -7.58,2.32c-1.72,1.55 -2.58,3.49 -2.58,5.82c0,1.85 0.47,3.34 1.39,4.48h15.05C-41.39,99.77 -42.07,99.56 -42.84,99.37z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-48.84,103.16l2.82,0.62c1.65,0.35 2.86,0.76 3.62,1.22c0.76,0.47 1.14,1.14 1.14,2c0,1.48 -0.78,2.48 -2.33,3.03c-0.82,0.28 -1.88,0.42 -3.2,0.42c-2.19,0 -3.74,-0.54 -4.64,-1.61c-0.49,-0.59 -0.82,-1.48 -0.99,-2.67h-5.2c0,2.71 0.98,4.85 2.95,6.4c1.97,1.55 4.67,2.33 8.1,2.33c3.36,0 5.96,-0.79 7.81,-2.36c1.84,-1.57 2.76,-3.55 2.76,-5.94c0,-1.9 -0.53,-3.42 -1.57,-4.59h-15.32C-51.85,102.41 -50.5,102.79 -48.84,103.16z"/>
 </vector>
