--- a/app/src/main/res/drawable/ic_right_align.xml
+++ b/app/src/main/res/drawable/ic_right_align.xml
@@ -1,30 +1,121 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="54dp"
-    android:height="54dp"
-    android:viewportWidth="54"
-    android:viewportHeight="54">
-
-  <path
-      android:pathData="M13,15.5L42,15.5"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M21,22.83L42,22.83"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M13,30.17L42,30.17"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M21,37.5L42,37.5"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-
-
-
+<vector android:height="50dp" android:viewportHeight="54"
+    android:viewportWidth="54" android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-847.41,56h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V22.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-839,52.23 -842.77,56 -847.41,56z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-773.41,56h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V22.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-765,52.23 -768.77,56 -773.41,56z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-699.41,56h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V22.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-691,52.23 -694.77,56 -699.41,56z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-588.41,56h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V22.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-580,52.23 -583.77,56 -588.41,56z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-514.41,56h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V22.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-506,52.23 -509.77,56 -514.41,56z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-699.41,130h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V96.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-691,126.23 -694.77,130 -699.41,130z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-773.41,130h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V96.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-765,126.23 -768.77,130 -773.41,130z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-699.41,204h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-691,200.23 -694.77,204 -699.41,204z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-699.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-691,274.23 -694.77,278 -699.41,278z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-773.41,204h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-765,200.23 -768.77,204 -773.41,204z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-847.41,130h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41V96.41c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-839,126.23 -842.77,130 -847.41,130z" android:strokeAlpha="0.571"/>
+    <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
+        android:pathData="M-847.41,204h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-839,200.23 -842.77,204 -847.41,204z" android:strokeAlpha="0.571"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-105,-208l-23,0l0,6.27l8.36,0l0,20.91l6.28,0l0,-20.91l8.36,0z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-122.58,-194.74l-11.4,-0.02l-0.01,3.63l3.88,0l-0.02,10.11l3.63,0.01l0.02,-10.11l3.89,0.01z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-49.64,-211.05h5.22l7.8,22.05h-5l-1.46,-4.53h-8.12l-1.49,4.53h-4.82L-49.64,-211.05zM-49.94,-197.33h5.65l-2.79,-8.68L-49.94,-197.33z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M130.08,-133.05h5.69l8.51,24.05h-5.45l-1.59,-4.94h-8.85l-1.63,4.94h-5.26L130.08,-133.05zM129.74,-118.09h6.16l-3.04,-9.46L129.74,-118.09z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-64,-185h34v6h-34z"/>
+    <path android:fillColor="#A09F9F"
+        android:pathData="M36.34,-205.82c0.82,1.13 1.22,2.49 1.22,4.07c0,1.63 -0.41,2.94 -1.24,3.92c-0.46,0.55 -1.14,1.06 -2.03,1.52c1.36,0.49 2.39,1.28 3.08,2.35c0.69,1.07 1.04,2.38 1.04,3.91c0,1.58 -0.39,3 -1.19,4.25c-0.5,0.83 -1.13,1.53 -1.89,2.1c-0.85,0.65 -1.86,1.1 -3.01,1.34c-1.16,0.24 -2.41,0.36 -3.77,0.36H16.55v-26.66h12.88C32.68,-208.61 34.99,-207.66 36.34,-205.82zM21.87,-204.03v5.88h6.48c1.16,0 2.09,-0.22 2.82,-0.66c0.72,-0.44 1.08,-1.22 1.08,-2.34c0,-1.24 -0.48,-2.06 -1.43,-2.46c-0.82,-0.28 -1.87,-0.42 -3.15,-0.42H21.87zM21.87,-193.74v7.11h6.47c1.16,0 2.06,-0.16 2.7,-0.47c1.17,-0.58 1.75,-1.69 1.75,-3.33c0,-1.39 -0.57,-2.34 -1.7,-2.86c-0.63,-0.29 -1.52,-0.44 -2.66,-0.45H21.87z"
+        android:strokeColor="#A09F9F" android:strokeWidth="0.5"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-113,-130.81l0,-3.9l-10.27,0l0,3.9l2.86,0l-3.86,19.72l-3.11,0l0,3.9l10.27,0l0,-3.9l-2.66,0l3.87,-19.72z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-60,-108h26v3h-26z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-134,-47L-107,-47"
+        android:strokeColor="#A09F9F" android:strokeWidth="5"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-121,-60L-121,-33"
+        android:strokeColor="#A09F9F" android:strokeWidth="5"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,-131.5L42,-131.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,-124.17L34,-124.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,-116.83L42,-116.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000" android:pathData="M10,-111.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="5"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,-109.5L34,-109.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,15.5L42,15.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M21,22.83L42,22.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,30.17L42,30.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M21,37.5L42,37.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M12,-57.5L41,-57.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M16,-50.17L37,-50.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M12,-42.83L41,-42.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M16,-35.5L37,-35.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#FF000000" android:pathData="M255,-9h47v47h-47z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M314,-9h47v47h-47z"/>
+    <path android:fillColor="#EA2621" android:pathData="M373,-9h47v47h-47z"/>
+    <path android:fillColor="#2525BA" android:pathData="M429,-9h47v47h-47z"/>
+    <path android:fillColor="#146D20" android:pathData="M483,-8h47v47h-47z"/>
+    <path android:fillColor="#FCC047" android:pathData="M255,51h47v47h-47z"/>
+    <path android:fillColor="#97D86C" android:pathData="M314,51h47v47h-47z"/>
+    <path android:fillColor="#ED4F6A" android:pathData="M255,111h47v47h-47z"/>
+    <path android:fillColor="#D6133D" android:pathData="M314,111h47v47h-47z"/>
+    <path android:fillColor="#709EFC" android:pathData="M373,51h47v47h-47z"/>
+    <path android:fillColor="#F96E90" android:pathData="M429,51h47v47h-47z"/>
+    <path android:fillColor="#9B9B9B" android:pathData="M483,52h47v47h-47z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M285.22,-181l-11.31,-14.71l3.05,-2.35l7.96,10.35l12.02,-18.88l3.25,2.07z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M340,-170l10,13l14,-22"
+        android:strokeColor="#A09F9F" android:strokeWidth="4"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-42.27,-121.49c0,1.7 -0.2,2.95 -0.6,3.73c-0.63,1.39 -1.99,2.09 -4.08,2.09c-2.1,0 -3.47,-0.7 -4.09,-2.09c-0.4,-0.78 -0.61,-2.03 -0.61,-3.73V-135h-5.27v13.53c0,2.64 0.41,4.69 1.23,6.16c1.53,2.69 4.45,4.04 8.74,4.04s7.2,-1.35 8.72,-4.04c0.82,-1.47 1.23,-3.52 1.23,-6.16V-135h-5.27V-121.49z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M151,-126l0,-3l-11.84,0l1.07,3z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M151,-120.33l0,-3l-9.81,0l1.07,3z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M151,-114.67l0,-3l-7.79,0l1.07,3z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M151,-109l0,-3l-5.76,0l1.07,3z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M155.08,-91.05h5.69L169.27,-67h-5.45l-1.59,-4.94h-8.85L151.75,-67h-5.26L155.08,-91.05zM154.74,-76.09h6.16l-3.04,-9.46L154.74,-76.09z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M162.18,-91.07L170.82,-66.93"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M163,-88.5L175,-88.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M163,-82.83L175,-82.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M163,-77.17L175,-77.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M163,-71.5L175,-71.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-63,-46h32v3h-32z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-42.84,-48.63l-4.58,-1.08c-1.77,-0.41 -2.92,-0.77 -3.47,-1.08c-0.85,-0.46 -1.27,-1.16 -1.27,-2.09c0,-1.01 0.43,-1.8 1.29,-2.37c0.86,-0.57 2.01,-0.85 3.45,-0.85c1.29,0 2.38,0.22 3.25,0.65c1.3,0.66 2.01,1.77 2.1,3.34h5.24c-0.1,-2.77 -1.13,-4.89 -3.09,-6.34c-1.96,-1.46 -4.34,-2.18 -7.12,-2.18c-3.33,0 -5.86,0.77 -7.58,2.32c-1.72,1.55 -2.58,3.49 -2.58,5.82c0,1.85 0.47,3.34 1.39,4.48h15.05C-41.39,-48.23 -42.07,-48.44 -42.84,-48.63z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-37.57,-46h-15.32c1.04,0.41 2.38,0.79 4.05,1.16l2.82,0.62c1.65,0.35 2.86,0.76 3.62,1.22c0.76,0.47 1.14,1.14 1.14,2c0,1.48 -0.78,2.48 -2.33,3.03c-0.82,0.28 -1.88,0.42 -3.2,0.42c-2.19,0 -3.74,-0.54 -4.64,-1.61c-0.37,-0.44 -0.65,-1.06 -0.84,-1.84h-5.32c0.18,2.32 1.15,4.18 2.91,5.56c1.97,1.55 4.67,2.33 8.1,2.33c3.36,0 5.96,-0.79 7.81,-2.36c1.84,-1.57 2.76,-3.55 2.76,-5.94C-36,-43.31 -36.53,-44.83 -37.57,-46z"/>
 </vector>
